Added profile loading and saving