@@ -1,21 +1,28 @@
 package dev.lrxh.punishmentSystem;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.jonahseguin.drink.CommandService;
 import com.jonahseguin.drink.Drink;
 import dev.lrxh.punishmentSystem.configs.ConfigService;
 import dev.lrxh.punishmentSystem.database.DatabaseService;
 import dev.lrxh.punishmentSystem.profile.ProfileListener;
 import dev.lrxh.punishmentSystem.punishment.command.PunishmentCommand;
+import lombok.Getter;
 import org.bukkit.plugin.java.JavaPlugin;
 
-import java.util.Arrays;
+import java.util.List;
 
 public final class Main extends JavaPlugin {
     public static Main instance;
+    @Getter
+    private Gson gson;
 
     @Override
     public void onEnable() {
         instance = this;
+        gson = new GsonBuilder().setPrettyPrinting().create();
+
         loadCMD();
         loadConfigs();
         loadListeners();
@@ -34,7 +41,7 @@ public final class Main extends JavaPlugin {
     }
 
     private void loadListeners() {
-        Arrays.asList(
+        List.of(
                 new ProfileListener()
         ).forEach(listener -> getServer().getPluginManager().registerEvents(listener, this));
     }
